[gd_scene load_steps=10 format=3 uid="uid://ltyx30vse8rp"]

[ext_resource type="Script" path="res://StoryMode/LVs/lv_5_nand_nor.gd" id="1_ce2x2"]
[ext_resource type="PackedScene" uid="uid://dntj6a7yxmak5" path="res://Logic_pice/nand_gate.tscn" id="1_x7234"]
[ext_resource type="PackedScene" uid="uid://cd0tjidll0v8k" path="res://Logic_pice/Toggle_Button.tscn" id="2_uoqx3"]
[ext_resource type="PackedScene" uid="uid://3anyt0st1dy4" path="res://Logic_pice/nor_gate.tscn" id="5_hwysy"]
[ext_resource type="PackedScene" uid="uid://crk8ewvm00l4o" path="res://Logic_pice/input_terminal.tscn" id="5_unss0"]
[ext_resource type="PackedScene" uid="uid://4pavgxtipt33" path="res://Buttons/Back_to_StoryMode.tscn" id="6_150ho"]
[ext_resource type="PackedScene" uid="uid://bg57gvfu37fr3" path="res://StoryMode/Level_Info/info_button.tscn" id="7_3n0px"]

[sub_resource type="Gradient" id="Gradient_wdajo"]
offsets = PackedFloat32Array(0, 0.0519481, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.968806, 0.954545, 1, 1, 0.313726, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_76hq2"]
gradient = SubResource("Gradient_wdajo")
fill_to = Vector2(1, 1)

[node name="LV5_Nand_Nor" type="Node2D"]
script = ExtResource("1_ce2x2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1153.0
offset_bottom = 658.0
texture = SubResource("GradientTexture2D_76hq2")

[node name="Nand_Gate" parent="." instance=ExtResource("1_x7234")]
position = Vector2(714, 430)

[node name="Toggle_Button" parent="." instance=ExtResource("2_uoqx3")]
position = Vector2(186, 288)

[node name="Toggle_Button2" parent="." instance=ExtResource("2_uoqx3")]
position = Vector2(189, 359)

[node name="Toggle_Button3" parent="." instance=ExtResource("2_uoqx3")]
position = Vector2(211, 470)

[node name="Input_terminal" parent="." instance=ExtResource("5_unss0")]
position = Vector2(966, 330)

[node name="Input_terminal2" parent="." instance=ExtResource("5_unss0")]
position = Vector2(966, 426)

[node name="Back_to_StoryMode" parent="." instance=ExtResource("6_150ho")]
position = Vector2(1060, 19)

[node name="Nor_Gate" parent="." instance=ExtResource("5_hwysy")]
position = Vector2(385.365, 324.605)

[node name="Label" type="Label" parent="."]
offset_left = 326.0
offset_top = 66.0
offset_right = 714.0
offset_bottom = 222.0
text = "Rools:
-to beat this lv make all the outputs Flase
-Togle butens can only conect to 1 thing
-use all gates
-1 output of each gate bust be 
conected to one input the check criterea of beet lv"

[node name="info_button" parent="." instance=ExtResource("7_3n0px")]
